# lycam-c

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.org
src/: CMakeLists.txt  arv.h  arvcamera.c  arvconfig.h  arvenumtypes.lo  arvevaluator.c  arvfakecamera.c  arvfeatures.h  arvgcport.c  arvgetifaddrs_win32.c  arvgetifaddrs_win32.h  arvgvdevice.c  arvgvfakecamera.c  arvgvinterface.c  arvgvstream.c  arvrealtime.c  arvrealtime.h  arvsystem.c  arvtool.c  arvuvstream.c  arvversion.h  lyucamera.c  lyucamera.h
test/: CMakeLists.txt  arvfakegvcamera.c
